<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C7 Jalisco</string>
    <string name="title_activity_inicio">C7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="gamepad">Gamepad</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="email">EMail</string>
    <string name="title_activity_menu__noticias">Menu_Noticias</string>
    <string name="title_activity_menu__cultura">Menu_Cultura</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tvnoticias">TVNoticias</string>
    <string name="title_activity_radio_noticias">RadioNoticias</string>
    <string name="title_activity_tvcultura">TVCultura</string>
    <string name="title_activity_radio_cultura">RadioCultura</string>
    <string name="title_activity_menu_programacion__cultura">MenuProgramacion_Cultura</string>
    <string name="title_activity_menu_tv__cultura">MenuTV_Cultura</string>
    <string name="title_activity_noticias_recientes">NoticiasRecientes</string>
    <string name="title_activity_accesibilidad_cultura">AccesibilidadCultura</string>
    <string name="title_activity_accesibilidad_noticias">AccesibilidadNoticias</string>
    <string name="title_activity_menu_tv__noticias">MenuTV_Noticias</string>
    <string name="title_activity_menu_programacion__noticias">MenuProgramacion_Noticias</string>
    <string name="title_activity_prueba_noticias">PruebaNoticias</string>
    <string name="title_activity_menu_radio__cultura_gdl">MenuRadio_CulturaGDL</string>
    <string name="title_activity_menu_radio__cultura_vallarta">MenuRadio_CulturaVallarta</string>
    <string name="title_activity_menu_radio__noticias">MenuRadio_Noticias</string>
    <string name="title_activity_menu_programacion_plataforma__cultura">MenuProgramacionPlataforma_Cultura</string>
    <string name="title_activity_menu_programacion_plataforma__noticias">MenuProgramacionPlataforma_Noticias</string>
    <string name="title_activity_menu_radio__cultura">MenuRadio_Cultura</string>
    <string name="title_activity_web_view_c7">WebViewC7</string>
    <string name="title_activity_tv">TV</string>
    <string name="title_activity_accesibilidad">Accesibilidad</string>
    <string name="title_activity_tvwatch_c7">TVWatchC7</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_redes_sociales">RedesSociales</string>
    <string name="title_activity_tab">TabActivity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
