<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/phone"
        android:title="@string/phone"
        android:icon="@drawable/home_icon"
        myapp:showAsAction="ifRoom" />

    <item
        android:id="@+id/computer"
        android:title="@string/computer"
        android:icon="@drawable/home_icon"
        myapp:showAsAction="ifRoom"  />

    <item
        android:id="@+id/gamepad"
        android:title="@string/gamepad"
        android:icon="@drawable/home_icon"
        myapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/camera"
        android:title="@string/camera"
        android:icon="@drawable/home_icon"
        myapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/video"
        android:title="@string/video"
        android:icon="@drawable/home_icon"
        myapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/email"
        android:title="@string/email"
        android:icon="@drawable/home_icon"
        myapp:showAsAction="ifRoom|withText" />

</menu>
